force-app/main/default/objects/Reporte_de_Gastos__c/Reporte_de_Gastos__c.object-meta.xml
<CustomObject>
    <label>Reporte de Gastos</label>
    <nameField>
        <label>Reporte de Gastos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reportes de Gastos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>