force-app/main/default/objects/Reporte_de_Gastos__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <label>Concepto</label>
    <length>128</length>
    <type>Text</type>
</CustomField>