force-app/main/default/objects/Reporte_de_Gastos__c/fields/Email_receptor__c.field-meta.xml
<CustomField>
    <fullName>Email_receptor__c</fullName>
    <label>Email receptor</label>
    <type>Email</type>
</CustomField>