force-app/main/default/objects/Reporte_de_Gastos__c/fields/Encabezado__c.field-meta.xml
<CustomField>
    <fullName>Encabezado__c</fullName>
    <label>Encabezado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encabezado</fullName>
                <default>true</default>
                <label>Encabezado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>