force-app/main/default/objects/Reporte_de_Gastos__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>A modificar</fullName>
            </value>
            <value>
                <fullName>Parcialmente Aprobada</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>No aprobado</fullName>
            </value>
            <value>
                <fullName>Aprobada y cerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>