force-app/main/default/objects/Reporte_de_Gastos__c/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <label>Monto</label>
    <summarizedField>Factura__c.Monto_Total__c</summarizedField>
    <summaryForeignKey>Factura__c.Reporte_de_Gastos__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>