force-app/main/default/objects/Reporte_de_Gastos__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>EXP-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>