force-app/main/default/objects/Reporte_de_Gastos__c/fields/Razon_social_o_nombre__c.field-meta.xml
<CustomField>
    <fullName>Razon_social_o_nombre__c</fullName>
    <label>Razon social o nombre</label>
    <length>128</length>
    <type>Text</type>
</CustomField>