force-app/main/default/objects/Reporte_de_Gastos__c/fields/Receptor_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Receptor_de_Pago__c</fullName>
    <label>Receptor de Pago</label>
    <type>TextArea</type>
</CustomField>