force-app/main/default/objects/Reporte_de_Gastos__c/fields/Recibi_de__c.field-meta.xml
<CustomField>
    <fullName>Recibi_de__c</fullName>
    <formula>&quot;Recibi de &quot; &amp;  Receptor_de_Pago__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recibi de</label>
    <type>Text</type>
</CustomField>