force-app/main/default/objects/Reporte_de_Gastos__c/recordTypes/User_1_picklist.recordType-meta.xml
<RecordType>
    <fullName>User_1_picklist</fullName>
    <active>true</active>
    <label>User 1 picklist</label>
</RecordType>