force-app/main/default/objects/Reporte_de_Gastos__c/recordTypes/User_2_picklist.recordType-meta.xml
<RecordType>
    <fullName>User_2_picklist</fullName>
    <active>true</active>
    <label>User 2 picklist</label>
</RecordType>