force-app/main/default/objects/Reporte_de_Gastos__c/recordTypes/User_3_picklist.recordType-meta.xml
<RecordType>
    <fullName>User_3_picklist</fullName>
    <active>true</active>
    <label>User 3 picklist</label>
</RecordType>