force-app/main/default/objects/Reporte_de_Gastos__c/recordTypes/User_4_picklist.recordType-meta.xml
<RecordType>
    <fullName>User_4_picklist</fullName>
    <active>true</active>
    <label>User 4 picklist</label>
</RecordType>