force-app/main/default/objects/Reporte_de_Gastos__c/recordTypes/User_5_picklist.recordType-meta.xml
<RecordType>
    <fullName>User_5_picklist</fullName>
    <active>true</active>
    <label>User 5 picklist</label>
</RecordType>